# mp2-lab2-matrix

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
gtest/: CMakeLists.txt
include/: CMakeLists.txt  tmatrix.h
samples/: CMakeLists.txt
test/: CMakeLists.txt  test_main.cpp  test_tmatrix.cpp  test_tvector.cpp
